These are the endpoints of the supplier's entity